增加OOM 4种类场景分析